# rust-web-starter

./: .gitignore  Cargo.toml
src/: logger.rs  main.rs
src/config/: mod.rs
