[package]
name = "rust-web-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.45.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
config = {version = "0.15.13", features = ["yaml"]}
serde = {version = "1.0.219",features = ["derive"]}